apps/media-server/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-server
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      name: sonarr-port
  type: ClusterIP
