apps/media-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: media
      http:
        paths:
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
          - path: /sabnzbd
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
          - path: /prowlarr
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
          - path: /pinchflat
            pathType: Prefix
            backend:
              service:
                name: pinchflat
                port:
                  number: 8080
  tls:
    - hosts:
        - media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: jellyfin
      port:
        number: 8096
  tls:
    - hosts:
        - jellyfin
